Add colors and stylings to css

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
-body {
+body{
     display: flex;
     flex-direction: column;
     margin: 0;
     min-height: 100vh;
   }
 
-ul {
+ul{
     list-style-type: none;
     margin: 0;
     margin-right: 20px;
     padding: 0;
     display: flex;
     gap: 10px;
+    color: white;
+    margin-right: 200px;
 }
 
 h1{
@@ -19,10 +21,12 @@ h1{
     margin-left: 20px;
     padding: 0;
     border: 0;
+    color: white;
+    margin-left: 200px;
 }
 
 .header{
-    background-color: aqua;
+    background-color: #1f2937;
     display: flex;
     align-items: center;
 }
@@ -33,25 +37,45 @@ h1{
 
 .part1{
     display: flex;
-    margin: 20px;
+    padding: 0;
+    background-color: #1f2937;
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
+
+.text2{
+    color: white;
+}
+
+.button1{
+    height: 25px;
+    width: 100px;
+    background-color: #3882f6;
+    color: white;
+    border: 0;
+    border-radius: 6px;
 }
 
 .hero{
     width: 400px;
+    background-color: #1f2937;
+    margin-left: 200px;
 }
 
 h2{
     padding: 0;
     border: 0;
+    color: white;
 }
 
 img{
     width: 450px;
     height: auto;
+    margin-right: 200px;
 }
 
 .part2{
-    background-color: grey;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,7 +84,7 @@ img{
 .container{
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 30px;
 }
 
 .box-cont{
@@ -72,26 +96,40 @@ img{
 
 .box-text{
     width: 100px;
+    color: #1f2937;
 }
 
 .box{
     width: 100px;
     height: 100px;
-    background-color: aqua;
+    background-color: white;
+    border: 3px solid #3882f6;
+    border-radius: 10%;
+    
 }
 
 .part3{
     display: flex;
     flex-direction: column;
+    
+    background-color: #E5E7EB;
+}
+
+.box3{
     width: 520px;
+    display: flex;
+    flex-direction: column;
     align-self: center;
 }
 
 h4{
     padding: 0;
+    color: #1f2937;
 }
 .quotation{
+    padding: 0;
     align-self: flex-end;
+    color: #1f2937;
 }
 
 .part4{
@@ -105,5 +143,46 @@ h4{
     display: flex;
     height: 100px;
     width: 800px;
-    background-color: aqua;
+    background-color: #3882f6;
+    margin: 50px;
+    border-radius: 6px;
+}
+
+.container2{
+    margin-left: 70px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
+.button2{
+    height: 25px;
+    width: 100px;
+    align-self: center;
+    background-color: #3882f6;
+    margin-right: 70px;
+    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+.footer{
+    display: flex;
+    background-color: #1f2937;
+    justify-content: center;
+}
+h5{
+    color: white;
+    margin: 0;
+    font-size: 20px;
+}
+
+.text{
+    margin: 0;
+    color: white;
+    font-size: 14px;
+}
+
+.foot-text{
+    color: white;
 }
